<resources>
    <string name="app_name">FuckingCustomView</string>

    <string name="custom_view">自定义View基本流程</string>
    <string name="arc_view">自定义圆弧</string>
    <string name="track_view">自定义变色文字</string>
    <string name="progress_view">自定义进度条</string>
    <string name="shape_view">仿58加载</string>
    <string name="star_view">自定义评分</string>
    <string name="letter_side_view">自定义字母选择</string>
    <string name="inflate_test">拦截测试</string>
    <string name="tag_view">tag</string>
    <string name="dispatch_view">️事件分发</string>
    <string name="slide_view">QQ6.0侧滑</string>
    <string name="drag_view">拖动</string>
    <string name="nine_view">九宫格</string>

</resources>