<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_custom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view" />

        <Button
            android:id="@+id/btn_arc_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arc_view" />

        <Button
            android:id="@+id/btn_track_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_view" />

        <Button
            android:id="@+id/btn_progress_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_view" />

        <Button
            android:id="@+id/shape_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shape_view" />

        <Button
            android:id="@+id/star_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star_view" />

        <Button
            android:id="@+id/letter_side_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_side_view" />

        <Button
            android:id="@+id/inflate_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inflate_test" />

        <Button
            android:id="@+id/tag_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_view" />

        <Button
            android:id="@+id/dispatch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispatch_view" />

        <Button
            android:id="@+id/slide_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_view" />

        <Button
            android:id="@+id/drag_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drag_view" />

        <Button
            android:id="@+id/nine_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_view" />


    </LinearLayout>
</layout>